--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <input class="form-check-input" type="checkbox" role="switch" id="natural_way_switch" checked>
               <label class="form-check-label" for="flexSwitchCheckChecked">Natural Way</label>
             </div>
+          
           </div>
         </div>
       </div>
@@ -48,6 +49,7 @@
 
   </nav>
     <div class="container mt-5">
+      <div>Select Topic</div>
       <div class="row">
         <div class="col-sm-4" id="topic_list_colm">
         </div>
